# casepilot-sber-ai-hack-2026

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
assets/: README.md
casepilot/: __init__.py  runtime.py  scenario_evolution.py
data/: expertise_catalog.json  historical_cases.json  scenario_candidates.json  scenario_catalog.json  scenario_learning_events.json  validation_cases.json
docs/: ISSUES.md  TO_BE.md  as_is_to_be_metrics.md  casepilot_demo_validation_report.md  casepilot_iteration_1.md  casepilot_iteration_2.md  casepilot_iteration_3.md  casepilot_mvp_architecture.md  casepilot_operator_workflow.md  clean_install_report.md  demo_script.md  environment_report.md  github_pages_demo.md  ouroboros_installation_assessment.md  ouroboros_overview.md  ouroboros_platform_6_61_4.md  scenario_candidate_assessment.md  scenario_evolution.md
frontend/: .nojekyll  app.js  demo-data.js  index.html  styles.css
schemas/: expertise_catalog.schema.json  historical_cases.schema.json  resolution_plan.schema.json  resolution_recommendation.schema.json  runtime_approvals.schema.json  runtime_executions.schema.json  runtime_plans.schema.json  runtime_published_scenarios.schema.json  runtime_recommendations.schema.json  runtime_runs.schema.json  runtime_scenario_drafts.schema.json  runtime_scenario_reviews.schema.json  scenario_candidates.schema.json  scenario_catalog.schema.json  scenario_learning_events.schema.json  validation_cases.schema.json
(+68 files in other folders)
